# generation_ai

./: .gitignore  README.md  pyproject.toml
agent_tutorial/: agent.py  multi_agents.py  react_agent.py  tool_config.py  tools.py
archive/2024 Fall Machine Learning Track/: pyproject.toml
archive/2024 Fall Machine Learning Track/lab/: decision_tree  lab_1_loan_prediction.ipynb  lab_2_perceptron_tuning.ipynb  lab_5_random_forest.ipynb  lab_7_prompt_engineering_101.ipynb  lab_8_adv_prompt_engineering.ipynb  lab_9_deeplearning_nlp.ipynb
archive/2024 Fall Machine Learning Track/lecture/: deep_learning_in_nlp.tex
data/: classification_sample.csv
genAI2025/: env_test.ipynb  lab1.ipynb  lab_2_loan_prediction.ipynb  lab_3_adv_ml.ipynb  lab_4_intro_deep_learning.ipynb  lab_4_train_shallow_cnn.ipynb  lab_5_llm_by_api.ipynb  lab_6_function_call.ipynb  predict_submit.py  pyproject.toml  readme.md
genAI2025/agent_tutorial/: agent.py  multi_agents.py  o1_demo.ipynb  react_agent.py  tool_config.py
genAI2025/data/: loan_data.csv
genAI2025/data/kaggle/: original.csv
genAI2025/data/kaggle_dataset/predict_calorie_expenditure/: desc.md
genAI2025/data/kaggle_dataset/predict_optimal_fertilizers/: desc.md
genAI2025/data/kaggle_dataset/predict_rainfall/: desc.md
genAI2025/ml_agent/: README.md  config.py  kaggle_multi_agent.py  prompt_comparison.md  run_example.py
graph/: graph.py  medium_graph_300.pickle  test_graph_advanced.py
lab/: lab_1_loan_prediction.ipynb  lab_2_perceptron_tuning.ipynb  lab_3_svm_tuning.ipynb  lab_4_train_shallow_cnn.ipynb  lab_5_random_forest.ipynb  lab_6_capstone_project.ipynb  lab_7_prompt_engineering_101.ipynb  lab_8_adv_prompt_engineering.ipynb  lab_9_deeplearning_nlp.ipynb
lab/lab1/: loan_prediction.ipynb
lecture/: deep_learning_in_nlp.tex  ensemble_models.tex  writing.tex
tutorial/Design Algo with Cursor/: generate_large_graph.py  graph.py  test_graph_advanced.py
tutorial/Your First API Service/: pyproject.toml  server.py
