[tool.poetry]
name = "generation-ai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
datasets = "^3.1.0"
scikit-learn = "^1.5.2"
jupyter = "^1.1.1"
numpy = ">=1.26.0,<2.1.0"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
tensorflow = "^2.16.2"
tensorflow-macos = "^2.16.2"
tensorflow-metal = "^1.1.0"
graphviz = "^0.20.3"
xgboost = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
