[project]
name = "genai2025"
version = "0.1.0"
description = ""
authors = [
    {name = "Drjunchenfeng",email = "fengjunchen@sparkedu.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn (>=1.6.1,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "xgboost (>=3.0.0,<4.0.0)",
    "kaggle (>=1.7.4.5,<2.0.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "openai (>=1.82.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "graphviz (>=0.20.3,<0.21.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
